--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -248,37 +248,41 @@ void bar(void)
 
 因为`smp_mb()`, 所以`a=1`要先写入缓存行后才会写b？？
 
-5．CPU 0接收“读”消息，随后发送包含**原始！！！“b”值的缓存行**给**CPU1**。它也标记**该缓存行**的复制为“**shared**”状态。
+5．CPU 0接收“读”消息，随后发送包含**原始！！！“b”值的缓存行！！！** 给**CPU1**。它也标记**该缓存行**的复制为“**shared**”状态。
 
-6．CPU 1读取到包含“b”的缓存行，并将它复制到**本地缓存**中。
+给的是`b=0`, 而**不是b=1**.
+
+6．CPU 1读取到包含“b”的缓存行，并将它复制到**本地缓存**中。**这里b=0**, **其实已经b=1了**.
 
 7．CPU 1现在可以装载“b”的值了，但是，由于它发现其值**仍然为“0”**，因此它**重复执行while语句**。“b”的新值被安全的隐藏在**CPU0**的**存储缓冲区**中。
 
 8．CPU 1接收到“**读使无效**”消息，发送**包含“a”的缓存行**给**CPU 0**，并且使它的**缓存行无效**。
 
-CPU 1执行"读使无效"耗时较长, 通常会将该消息存放到**无效队列**中, 马上返回响应. 这时**CPU 0收到响应后**会接着执行`b = 1`. 等**cpu 1**执行到`assert(a == 1)`时在无效队列中的"**读使无效**"有可能**还没来得及执行**, 这时会使用cpu 1缓存中值为0的a, 导致断言错误.
+CPU 1执行"读使无效"耗时较长, 通常会将该消息存放到**无效队列**中, 马上返回响应给CPU 0. 这时**CPU 0收到响应后**会接着执行`b = 1`.
 
-9．CPU 0**接收到包含“a”的缓存行**，使用**存储缓冲区的值！！！替换缓存行(状态**，将这一行设置为“**modified**”状态。
+等**cpu 1**执行到`assert(a == 1)`时在无效队列中的"**读使无效**"有可能**还没来得及执行**, 这时会直接使用cpu 1缓存中值为0的a, 导致**断言错误**.
 
-10．由于被存储的“a”是**存储缓冲区**中唯一被`smp_mb()`**标记**的条目，因此CPU0能够**存储“b”的新值**到**缓存行**中，除非包含“b”的缓存行当前处于“**shared**”状态。
+9．CPU 0**接收到包含“a”的缓存行**，使用**存储缓冲区的值！！！替换缓存行(状态变化时真正更新a=1到缓存行**)，将这一行设置为“**modified**”状态。
 
-由于smp_mb仅仅标记了a，而在第9步中，a已经**进入缓存行**并被标记为mod状态，因此，此时b可以放心的进入缓存行。只要此时**b不是share状态**，就不用与其他核交换MESI消息**以获得独占权限**，也就是说，此时**可以直接将b的值放入缓存行**中。
+10．由于被存储的“a”是**存储缓冲区**中唯一被`smp_mb()`**标记**的条目，因此CPU0能够**存储“b”的新值！！！** 到**缓存行！！！** 中，除非包含“b”的缓存行当前处于“**shared**”状态。
+
+由于smp_mb仅仅标记了a，而在第9步中，a已经**进入缓存行**并被标记为**mod状态**，因此，此时**b可以放心的进入缓存行**。只要此时**b不是share状态**，就不用与其他核交换MESI消息**以获得独占权限**，也就是说，此时**可以直接将b的值放入缓存行**中。
 
 11．CPU 0发送一个“**使无效**”消息给CPU 1, b无效消息。
 
 12．CPU 1接收到“使无效”消息，**使包含“b”的缓存行无效**，并且发送一个“**使无效应答**”消息给 CPU 0。
 
-13．CPU 1执行`while(b == 0) continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息给 CPU 0。
+13．CPU 1执行`while(b == 0) continue`，但是包含“b”的缓存行**不在它的缓存！！！**中，因此它发送一个“**读**”消息给 CPU 0。
 
-14．CPU 0接收到“使无效应答”消息，将包含“b”的缓存行设置成“**exclusive**”状态。CPU 0现在存储**新的“b”值到缓存行**。
+14．CPU 0接收到“使无效应答”消息，将包含“b”的**缓存行**设置成“**exclusive**”状态。CPU 0现在存储**新的“b”值到缓存行**。
 
-15．CPU 0接收到“读”消息，同时发送包含新的“b”值的缓存行给 CPU 1。它也标记该缓存行的复制为“**shared**”状态。
+15．CPU 0接收到“**读**”消息，同时发送包含**新的“b”值的缓存行**给 CPU 1。它也标记该缓存行的复制为“**shared**”状态。
 
-16．CPU 1接收到包含“b”的缓存行，并将它复制到本地缓存中。
+16．CPU 1接收到包含“b”的缓存行，并将它复制到**本地缓存**中。
 
-17．CPU 1现在能够装载“b”的值了，由于它发现“b”的值为1，它退出while循环并执行下一条语句。
+17．CPU 1现在能够装载“b”的值了，由于它发现“**b”的值为1**，它退出while循环并执行下一条语句。
 
-18．CPU 1执行assert(a== 1)，但是包含“a”的缓存行不在它的缓存中。一旦它从CPU0获得这个缓存行，它将使用最新的“a”的值，因此断言语句将通过。
+18．CPU 1执行`assert(a== 1)`，但是包含“a”的缓存行**不在它的缓存**中。一旦它从CPU0获得这个缓存行，它将使用**最新的“a”的值**，因此断言语句将通过。
 
 正如你看到的那样，这个过程涉及不少工作。即使某些事情从直觉上看是简单的操作，就像“加载a的值”这样的操作，都会包含大量复杂的步骤。
 
