--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -260,7 +260,7 @@ void bar(void)
 
 CPU 1执行"读使无效"耗时较长, 通常会将该消息存放到**无效队列**中, 马上返回响应给CPU 0. 这时**CPU 0收到响应后**会接着执行`b = 1`.
 
-等**cpu 1**执行到`assert(a == 1)`时在无效队列中的"**读使无效**"有可能**还没来得及执行**, 这时会直接使用cpu 1缓存中值为0的a, 导致**断言错误**.
+等**cpu 1**执行到`assert(a == 1)`时在无效队列中的"**读使无效**"有可能**还没来得及执行**, 这时会直接使用cpu 1缓存中值为0的a, 导致**断言错误**. 这也是下面两个函数都加内存屏蔽的代码.
 
 9．CPU 0**接收到包含“a”的缓存行**，使用**存储缓冲区的值！！！替换缓存行(状态变化时真正更新a=1到缓存行**)，将这一行设置为“**modified**”状态。
 
@@ -282,7 +282,7 @@ CPU 1执行"读使无效"耗时较长, 通常会将该消息存放到**无效队
 
 17．CPU 1现在能够装载“b”的值了，由于它发现“**b”的值为1**，它退出while循环并执行下一条语句。
 
-18．CPU 1执行`assert(a== 1)`，但是包含“a”的缓存行**不在它的缓存**中。一旦它从CPU0获得这个缓存行，它将使用**最新的“a”的值**，因此断言语句将通过。
+18．CPU 1执行`assert(a== 1)`，但是包含“a”的缓存行**不在它的缓存**中。一旦它**从CPU0获得这个缓存行**，它将使用**最新的“a”的值**，因此断言语句将通过。
 
 正如你看到的那样，这个过程涉及不少工作。即使某些事情从直觉上看是简单的操作，就像“加载a的值”这样的操作，都会包含大量复杂的步骤。
 
