--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -237,8 +237,8 @@ void bar(void)
 
 1．CPU 0执行`a = 1`。缓存行**不在CPU0的缓存**中，因此**CPU 0**将“a”的**新值**放到**存储缓冲区**中，并发送一个“**读使无效**”消息。
 
-- 读: 见下面响应后动作
-- 使无效: 见下面响应后动作
+- 读: 
+- 使无效: 
 
 2．CPU 1 执行`while(b == 0) continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
 
