--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -242,7 +242,7 @@ void bar(void)
 
 2．CPU 1 执行`while(b == 0) continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
 
-3．CPU 0执行`smp_mb()`，并**标记当前所有存储缓冲区的条目**。（也就是说**a = 1这个条目**）。
+3．CPU 0执行`smp_mb()`，并**标记当前所有存储缓冲区的条目！！！**。（也就是说**a = 1这个条目**）。
 
 4．CPU 0执行b= 1。它**已经拥有这个缓存行**了。（也就是说, **缓存行**已经处于“**modified**”或者“**exclusive**”状态），但是在**存储缓冲区**中存在一个**标记条目！！！**。因此，它**不将“b”的新值**存放到**缓存行**，而是存放到**存储缓冲区**中。（但是“b”**不是一个标记条目**）。
 
