--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -252,9 +252,9 @@ void bar(void)
 
 给的是`b=0`, 而**不是b=1**.
 
-6．CPU 1读取到包含“b”的缓存行，并将它复制到**本地缓存**中。**这里b=0**, **其实已经b=1了**.
+6．CPU 1读取到包含“b”的缓存行，并将它复制到**本地缓存**中。**这里b=0**, 但**其实已经b=1了**.
 
-7．CPU 1现在可以装载“b”的值了，但是，由于它发现其值**仍然为“0”**，因此它**重复执行while语句**。“b”的新值被安全的隐藏在**CPU0**的**存储缓冲区**中。
+7．CPU 1现在可以装载“b”的值了，但是，由于它发现其值**仍然为“0”**，因此它**重复执行while语句**。“b”的新值被安全的隐藏在**CPU0**的**存储缓冲区！！！**中。
 
 8．CPU 1接收到“**读使无效**”消息，发送**包含“a”的缓存行**给**CPU 0**，并且使它的**缓存行无效**。
 
@@ -262,7 +262,7 @@ CPU 1执行"读使无效"耗时较长, 通常会将该消息存放到**无效队
 
 等**cpu 1**执行到`assert(a == 1)`时在无效队列中的"**读使无效**"有可能**还没来得及执行**, 这时会直接使用cpu 1缓存中值为0的a, 导致**断言错误**. 这也是下面两个函数都加内存屏蔽的代码.
 
-9．CPU 0**接收到包含“a”的缓存行**，使用**存储缓冲区的值！！！替换缓存行(状态变化时真正更新a=1到缓存行**)，将这一行设置为“**modified**”状态。
+9．CPU 0**接收到包含“a”的缓存行**，使用**存储缓冲区的值！！！替换缓存行(状态变化时才真正更新a=1到缓存行？？？**)，将这一行设置为“**modified**”状态。
 
 10．由于被存储的“a”是**存储缓冲区**中唯一被`smp_mb()`**标记**的条目，因此CPU0能够**存储“b”的新值！！！** 到**缓存行！！！** 中，除非包含“b”的缓存行当前处于“**shared**”状态。
 
