--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -262,13 +262,13 @@ CPU 1执行"读使无效"耗时较长, 通常会将该消息存放到**无效队
 
 等**cpu 1**执行到`assert(a == 1)`时在无效队列中的"**读使无效**"有可能**还没来得及执行！！！**, 这时会直接使用cpu 1缓存中值为0的a, 导致**断言错误**. 这也是下面两个函数都加内存屏蔽的原因.
 
-9．CPU 0**接收到包含“a”的缓存行**，使用**存储缓冲区的值！！！替换缓存行(状态变化时才真正更新a=1到缓存行？？？**)，将这一行设置为“**modified**”状态。
+9．CPU 0**接收到包含“a”的缓存行**，使用**存储缓冲区的值！！！替换缓存行(接收到后才真正更新a=1到缓存行？？？**)，将这一行设置为“**modified**”状态。
 
 10．由于被存储的“a”是**存储缓冲区**中唯一被`smp_mb()`**标记**的条目，因此CPU0能够**存储“b”的新值！！！** 到**缓存行！！！** 中，除非包含“b”的缓存行当前处于“**shared**”状态。
 
 由于smp_mb仅仅标记了a，而在第9步中，a已经**进入缓存行**并被标记为**mod状态**，因此，此时**b可以放心的进入缓存行**。只要此时**b不是share状态**，就不用与其他核交换MESI消息**以获得独占权限**，也就是说，此时**可以直接将b的值放入缓存行**中。
 
-11．CPU 0发送一个“**使无效**”消息给CPU 1, b无效消息。
+11．CPU 0发送一个“**使无效**”消息给CPU 1, b无效消息。(因为shared, 所以要)
 
 12．CPU 1接收到“使无效”消息，**使包含“b”的缓存行无效**，并且发送一个“**使无效应答**”消息给 CPU 0。
 
