--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -268,7 +268,7 @@ CPU 1执行"读使无效"耗时较长, 通常会将该消息存放到**无效队
 
 由于smp_mb仅仅标记了a，而在第9步中，a已经**进入缓存行**并被标记为**mod状态**，因此，此时**b可以放心的进入缓存行**。只要此时**b不是share状态**，就不用与其他核交换MESI消息**以获得独占权限**，也就是说，此时**可以直接将b的值放入缓存行**中。
 
-11．CPU 0发送一个“**使无效**”消息给CPU 1, b无效消息。(因为shared, 所以要)
+11．CPU 0发送一个“**使无效**”消息给CPU 1, b无效消息。(因为shared, 所以要发送"使无效")
 
 12．CPU 1接收到“使无效”消息，**使包含“b”的缓存行无效**，并且发送一个“**使无效应答**”消息给 CPU 0。
 
