--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
+++ b/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
@@ -190,6 +190,8 @@ MESI协议需要在CPU之间通信。如果CPU在**单一共享总线**上，只
 
 - Transition (j)：**本CPU保存一个数据到缓存行**，但是数据还**没有在它的缓存行！！！** 中。因此发送一个“**读使无效！！！**” 消息。直到它接收到“**读响应**”消息以及**所有“使无效应答”消息**后，才完成事务。缓存行可能会很快转换到“**修改**”状态，这是在存储完成后由Transition (b)完成的。
 
+**读使无效可以获取独享缓存行！！！**
+
 - Transition (k)：本CPU装载一个数据，但是数据还没有在缓存行中。CPU发送一个“读”消息，当它接收到相应的“读响应”消息后完成转换。
 
 - Transition (l)：其他CPU**存储一个数据到缓存行**，但是该缓存行处于**只读状态！！！**（因为**其他CPU也持有该缓存行**）。这个转换开始于接收到一个“**使无效**”消息，当前CPU最终响应一个“使无效应答”消息。
