--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -64,9 +64,11 @@ assert(b == 2);
 
 6．**CPU 0**开始执行**b = a + 1**。
 
-7．CPU 0从**CPU 1**接收到**缓存行**(也就是将来自**CPU 1的数据存到缓存行**)，它仍然拥有一个为“**0**”的“a”值。
+7．CPU 0从**CPU 1**接收到**缓存行**(也就是将来自**CPU 1的a=0数据存到缓存行！！！**)，它仍然拥有一个为“**0**”的“a”值。
 
-write buffer是为了写操作用, 所以接收到以后, 就会放入**缓存行**
+write buffer是为了写操作用, 所以从 CPU 1 接收到以后, 就会放入**缓存行**.
+
+这里为什么不使用write buffer的值替换到缓存行呢？？ 如果有
 
 8．**CPU 0**从它的**缓存行**中读取到“a”的值，发现**其值为0**, 因为这时候的**存储缓冲区的值还没写到缓存行**。
 
