--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -247,7 +247,7 @@ void bar(void)
 
 4．CPU 0执行b= 1。它**已经拥有这个缓存行**了。（也就是说, **缓存行**已经处于“**modified**”或者“**exclusive**”状态），但是在**存储缓冲区**中存在一个**标记条目！！！**。因此，它**不将“b”的新值**存放到**缓存行**，而是存放到**存储缓冲区**中。（但是“b”**不是一个标记条目**）。
 
-因为`smp_mb()`, 所以`a=1`要先写入缓存行后才会写b？？
+因为`smp_mb()`, 所以`a=1`要**先写入缓存行**后才会写b？？
 
 5．CPU 0接收“读”消息，随后发送包含**原始！！！“b”值的缓存行！！！** 给**CPU1**。它也标记**该缓存行**的复制为“**shared**”状态。
 
@@ -263,7 +263,9 @@ CPU 1执行"读使无效"耗时较长, 通常会将该消息存放到**无效队
 
 等**cpu 1**执行到`assert(a == 1)`时在无效队列中的"**读使无效**"有可能**还没来得及执行！！！**, 这时会直接使用cpu 1缓存中值为0的a, 导致**断言错误**. 这也是下面两个函数都加内存屏蔽的原因.
 
-9．CPU 0**接收到包含“a”的缓存行**，使用**存储缓冲区的值！！！替换缓存行(接收到后才真正更新a=1到缓存行？？？**)，将这一行设置为“**modified**”状态。
+9．CPU 0**接收到包含“a”的缓存行**，使用**存储缓冲区的值！！！替换缓存行**，将这一行设置为“**modified**”状态。
+
+这里肯定不是接收到了所以才真正更新a=1到缓存行？？？
 
 10．由于被存储的“a”是**存储缓冲区**中唯一被`smp_mb()`**标记**的条目，因此CPU0能够**存储“b”的新值！！！** 到**缓存行！！！** 中，除非包含“b”的缓存行当前处于“**shared**”状态。
 
