--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -302,6 +302,17 @@ void run2
 
 通常，我们是希望在写屏障之前出现的STORE操作总是匹配度屏障或者数据依赖屏障之后出现的LOAD操作。以之前的代码示例为例：
 
+```cpp
+// thread 1
+x = 42;
+smb_wmb();
+ok = 1;
+// thread 2
+while(!ok);
+smb_rmb();
+do(x);
+```
+
 
 
 # 参考
