--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -300,7 +300,7 @@ void run2
 
 还需要注意一点是，**CPU内存屏障**中某些类型的屏障需要成对使用，否则会出错，详细来说就是：一个写操作屏障需要和读操作（或者数据依赖）屏障一起使用（当然，通用屏障也是可以的），反之亦然。
 
-通常，我们是希望在写屏障之前出现的STORE操作总是匹配度屏障或者数据依赖屏障之后出现的LOAD操作。以之前的代码示例为例：
+通常，我们是希望在**写屏障之前出现的STORE操作**总是匹配**读屏障**或者**数据依赖屏障**之后出现的**LOAD操作**。以之前的代码示例为例：
 
 ```cpp
 // thread 1
@@ -313,7 +313,12 @@ smb_rmb();
 do(x);
 ```
 
+我们这么做，是希望在thread2执行到do(x)时（在ok验证的确=1时），x = 42的确是有效的(写屏障之前出现的STORE操作)，此时do(x)，的确是在执行do(42)（读屏障之后出现的LOAD操作）
 
+# 利用内存屏障实现无锁环形缓冲区
+
+最后，以一个使用内存屏障实现的无锁环形缓冲区（只有一个读线程和一个写线程时）来结束本文。本代码源于内核FIFO的一个实现，内容如下（略去了非关键代码）：
+代码来源：linux-2.6.32.63\kernel\kfifo.c
 
 # 参考
 
