--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -203,7 +203,9 @@ void run2
 }
 ```
 
-变量x、y、r1、r2均被初始化为0，**run1**和**run2**运行在**不同的线程**中。如果run1和run2在**同一个cpu**下执行完成，那么就如我们所料，**r1和r2**的值**不会同时为0**，而假如run1和run2在**不同的CPU**下执行完成后，由于存在**内存乱序访问**的可能，这时**r1和r2可能同时为0**。
+变量x、y、r1、r2均被初始化为0，**run1**和**run2**运行在**不同的线程**中。如果run1和run2在**同一个cpu**下执行完成，那么就如我们所料，**r1和r2**的值**不会同时为0**.
+
+而假如run1和run2在**不同的CPU**下执行完成后，由于存在**内存乱序访问**的可能，这时**r1和r2可能同时为0**。
 
 我们可以使用**CPU内存屏障**来避免**运行时内存乱序访问**(`x86_64`)：
 
