--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -253,11 +253,13 @@ Performs a serializing operation on all load-from-memory and store-to-memory ins
 
 也就是说mfence指令：确保所有mfence指令之前的**写入**(store/release)指令，都在**该mfence指令之后的写入**（store/release）指令**之前**（指令序，Program Order）执行；同时，他还确保所有mfence指令之后的**读取**（load/acquire）指令，都在该mfence指令之前的读取（load/acquire）指令之后执行。即：既确保**写者**能够按照**指令序完成数据写入**，也确保**读者**能够按照**指令序**完成**数据读取**。通用内存屏障保证所有出现在屏障之前的LOAD和STORE操作都将先于所有出现在屏障之后的LOAD和STORE操作被系统中的其他组件所感知.
 
-- **sfence**我认为其动作，可以看做是**一定将数据写回内存**，而**不是写到高速缓存**中。
-- **lfence**的动作，可以看做是**一定将数据从高速缓存中抹掉**，从**内存中读出来**，而**不是直接从高速缓存**中读出来。
-- mfence则正好结合了两项操作。**sfence**只确保**写者**在将**数据（A->B）写入内存的顺序**，并**不确保其他人读(A,B)数据**时，一定是按照**先读A**更新后的数据，**再读B**更新后的数据这样的顺序，很有可能读者读到的顺序是**A旧数据**，**B更新后的数据**，**A更新后的数据**（只是这个更新后的数据出现在读者的后面，他并**没有“实际”去读**）；同理，**lfence**也就只能确保**读者在读入顺序**时，按照**先读A最新的在内存中的数据**，再读**B最新的在内存中的数据的顺序**，但如果没有写者sfence的配合，显然，即使顺序一致，内容还是有可能乱序。
+- **sfence**我认为其动作，可以看做是**一定将数据写回内存！！！**，而**不是写到高速缓存！！！**中。
+- **lfence**的动作，可以看做是**一定将数据从高速缓存中抹掉！！！**，从**内存中读出来！！！**，而**不是直接从高速缓存**中读出来。
+- mfence则正好结合了两项操作。
 
-为什么仅通过保证了**写者的写入顺序**(sfence), 还是有可能有问题？还是之前的例子
+**sfence**只确保**写者**在将**数据（A->B）写入内存的顺序**，并**不确保其他人读(A,B)数据**时，一定是按照**先读A**更新后的数据，**再读B**更新后的数据这样的顺序，很有可能读者读到的顺序是**A旧数据**，**B更新后的数据**，**A更新后的数据**（只是这个更新后的数据出现在读者的后面，他并**没有“实际”去读**）；同理，**lfence**也就只能确保**读者在读入顺序**时，按照**先读A最新的在内存中的数据**，再读**B最新的在内存中的数据的顺序**，但如果没有写者sfence的配合，显然，即使顺序一致，内容还是有可能乱序。
+
+为什么仅通过保证了**写者的写入顺序**(sfence), 还是有**可能有问题**？还是之前的例子
 
 ```cpp
 void run1()
