--- Auto-Git Commit ---

--- a/Linux/Interrupt/Linux中断源码分析/2. 初始化.md
+++ b/Linux/Interrupt/Linux中断源码分析/2. 初始化.md
@@ -3,11 +3,11 @@
 
 <!-- code_chunk_output -->
 
-* [1 回顾](#1-回顾)
-* [2 初始化中断描述符表](#2-初始化中断描述符表)
-* [3 初始化异常向量](#3-初始化异常向量)
-* [4 初始化中断](#4-初始化中断)
-* [总结](#总结)
+- [1 回顾](#1-回顾)
+- [2 初始化中断描述符表](#2-初始化中断描述符表)
+- [3 初始化异常向量](#3-初始化异常向量)
+- [4 初始化中断](#4-初始化中断)
+- [总结](#总结)
 
 <!-- /code_chunk_output -->
 
@@ -33,7 +33,7 @@
 
 而中断描述符表的初始化情况是，第一部分是经过**一段汇编代码**对**整个中断描述符表**进行初始化，第二部分是在**系统进入start\_kernel**()函数后分别对**异常和中断进行初始化**。
 
-在linux中，**中断描述符表**用**idt\_table[NR\_VECTORS**]数组进行描述，**中断向量(门描述符**)在系统中用**struct desc\_struct**结构表示，具体我们可以往下看。
+在linux中，**中断描述符表**用`idt_table[NR_VECTORS]`数组进行描述，**中断向量(门描述符**)在系统中用**struct desc\_struct**结构表示，具体我们可以往下看。
 
 ```assembly
 /*
