--- Auto-Git Commit ---

--- a/Linux/Interrupt/Linux中断源码分析/2. 初始化.md
+++ b/Linux/Interrupt/Linux中断源码分析/2. 初始化.md
@@ -181,7 +181,7 @@ static inline void set_task_gate(unsigned int n, unsigned int gdt_entry)
 
 这几个函数用于设置不同门的API函数，他们的参数n都为中断号，而他们都会调用\_set\_gate()函数，只是参数不同，\_set\_gate()函数如下：
 
-```c
+```cpp
 /* 设置一个门描述符，并写入中断描述符表
  * gate: 中断号
  * type: 门类型
