--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/9. 中断vector及priority.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/9. 中断vector及priority.md
@@ -89,7 +89,7 @@ else
 
 然而，一个**中断请求能得到响应**，并**不是只依据`TPR[7：4]`的值**，还需要**依赖于ISR（In-Service Register**），在**TPR和ISR的互相作用**下产生“**处理器当前的优先级**”。
 
-```c
+```cpp
 if （TPR[7：4] >= MSB_OF（ISR）） /* TPR[7：4]和ISR记录的最高中断服务例程vector[7：4]进行比较 */
 {
    PPR[7：0]=TPR[7：0]；
@@ -105,11 +105,11 @@ else
 
 ![config](./images/44.png)
 
-**PPR和TPR这两个寄存器**的结构和意义是一样的。当**ISR的值为0**时**PPR的值就等于TPR的值**。**中断请求的优先级**只有**高于PPR[7：4]才可能被响应(！！！**)。
+**PPR和TPR这两个寄存器**的结构和意义是一样的。当**ISR的值为0**时**PPR的值就等于TPR的值**。**中断请求的优先级**只有**高于**`PPR[7：4]`才可能被响应(！！！)。
 
 ![config](./images/45.png)
 
-从上面的运行结果我们可以看到，当设TPR的值为0x32时（PPR也为0x32），0x33号中断请求记录在IRR里（第0x33位置位），但被抑制没有响应。
+从上面的运行结果我们可以看到，当设**TPR**的值为**0x32**时（**PPR**也为**0x32**），**0x33号**中断请求记录在**IRR**里（第**0x33位置位**），但**被抑制没有响应**。
 
 # 4. 在64位模式下的优先级
 
