--- a/Virtualization/KVM/1. 原理概述/5. 利用KVM虚拟机启动Demo.md
+++ b/Virtualization/KVM/1. 原理概述/5. 利用KVM虚拟机启动Demo.md
@@ -51,6 +51,8 @@ ioctl(kvm->vcpus->vcpu_fd, KVM_RUN, 0);
 
 这里的退出并**不一定是虚拟机关机**，虚拟机如果遇到IO操作，访问硬件设备，缺页中断等都会退出执行，退出执行可以理解为将CPU执行上下文返回到QEMU。
 
+在虚机启动之后正常运行的过程中，虚机就是在不断的经历ioctl进入，返回，进入，返回的循环过程，如下面的伪码所示。
+
 ```cpp
 open("/dev/kvm")
 ioctl(KVM_CREATE_VM)
