--- Auto-Git Commit ---

--- a/Virtualization/KVM/1. 原理概述/5. 利用KVM虚拟机启动Demo.md
+++ b/Virtualization/KVM/1. 原理概述/5. 利用KVM虚拟机启动Demo.md
@@ -66,6 +66,8 @@ for (;;) {
 }
 ```
 
+上述伪码是在用户空间中QEMU代码的实现模型，在内核中的KVM实现中，相关代码和用户空间类似，也是在进入虚机运行，等待虚机退出之后，会依据退出事件类型调用不同的处理钩子函数。唯一不同的是，如果退出事件内核判断内核层就可以处理完毕，就不需要再退出到用户层处理，而是直接在内核层就直接转入虚机运行态。这个过程如下图所示：
+
 关于`KVM_CREATE_VM`参数的描述，创建的VM是没有cpu和内存的，需要QEMU进程利用mmap系统调用映射一块内存给VM的描述符，其实也就是给VM创建内存的过程。
 
 参见: https://github.com/torvalds/linux/blob/master/Documentation/virt/kvm/api.rst
