--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
+++ b/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
@@ -15,5 +15,21 @@ for (;;) {
 }
 ```
 
-上述伪码是在用户空间中QEMU代码的实现模型，在内核中的KVM实现中，相关代码和用户空间类似，也是在进入虚机运行，等待虚机退出之后，会依据退出事件类型调用不同的处理钩子函数。唯一不同的是，如果退出事件内核判断**内核层就可以处理完毕**，就不需要再退出到用户层处理，而是直接在内核层就直接转入虚机运行态。这个过程如下图所示：
+上述伪码是在用户空间中QEMU代码的实现模型，在内核中的KVM实现中，相关代码和用户空间类似，也是在进入虚机运行，等待虚机退出之后，会依据退出事件类型调用不同的处理钩子函数。唯一不同的是，如果退出事件内核判断**内核层就可以处理完毕**，就**不需要**再退出到**用户层**处理，而是直接在内核层就直接转入虚机运行态。这个过程如下图所示：
 
+![2020-04-23-21-47-08.png](./images/2020-04-23-21-47-08.png)
+
+虚机的退出事件处理是虚机能正常运行的必要条件，对虚机运行意义重大，
+
+一个方面是**退出事件**的处理过程**消耗**对虚机性能表现**影响巨大**，例如virtio本质上也是为了解决频繁的退出事件对虚机的影响提出的优化解决方案，
+
+另一方面是退出事件是对**虚机运行情况最直观的反映**，因为虚机在进入vt-x模式之后，里面的运行情况外部来看其实是一个黑盒，只有虚机在触发一定条件后退出vt-x模式，宿主机才可以通过退出时携带的**状态数据**推测出当前虚机运行的关键信息，进而可以**定位或者解决问题**。
+
+# VM-EXIT事件
+
+
+
+
+# 参考
+
+https://cloud.tencent.com/developer/news/210058
