--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/3. 主要功能.md
+++ b/Virtualization/KVM/3. CPU虚拟化/3. 主要功能.md
@@ -3,30 +3,50 @@
 
 <!-- code_chunk_output -->
 
-- [1. KVM_CREATE_VM: 创建虚拟机](#1-kvm_create_vm-创建虚拟机)
-  - [1.1. struct kvm](#11-struct-kvm)
-  - [1.2. kvm_arch_init_vm](#12-kvm_arch_init_vm)
-  - [1.3. hardware_enable_all](#13-hardware_enable_all)
-- [2. KVM_CREATE_VCPU](#2-kvm_create_vcpu)
-  - [2.1. struct kvm_vcpu](#21-struct-kvm_vcpu)
-  - [2.2. kvm_arch_vcpu_create](#22-kvm_arch_vcpu_create)
-- [3. KVM_RUN](#3-kvm_run)
+- [1. 整体流程](#1-整体流程)
+- [2. KVM_CREATE_VM: 创建虚拟机](#2-kvm_create_vm-创建虚拟机)
+  - [2.1. struct kvm](#21-struct-kvm)
+  - [2.2. kvm_arch_init_vm](#22-kvm_arch_init_vm)
+  - [2.3. hardware_enable_all](#23-hardware_enable_all)
+- [3. KVM_CREATE_VCPU](#3-kvm_create_vcpu)
+  - [3.1. struct kvm_vcpu](#31-struct-kvm_vcpu)
+  - [3.2. kvm_arch_vcpu_create](#32-kvm_arch_vcpu_create)
+- [4. KVM_RUN](#4-kvm_run)
 
 <!-- /code_chunk_output -->
 
-# 1. KVM_CREATE_VM: 创建虚拟机
+# 1. 整体流程
+
+在虚机启动之后正常运行的过程中，虚机就是在不断的经历ioctl进入，返回，进入，返回的循环过程，如下面的伪码所示。
+
+```cpp
+open("/dev/kvm")
+ioctl(KVM_CREATE_VM)
+ioctl(KVM_CREATE_VCPU)
+for (;;) {
+     ioctl(KVM_RUN)
+     switch (exit_reason) {
+     case KVM_EXIT_IO:  /* ... */
+     case KVM_EXIT_HLT: /* ... */
+     }
+}
+```
+
+上述伪码是在用户空间中QEMU代码的实现模型，在内核中的KVM实现中，相关代码和用户空间类似，也是在进入虚机运行，等待虚机退出之后，会依据退出事件类型调用不同的处理钩子函数。唯一不同的是，如果退出事件内核判断**内核层就可以处理完毕**，就**不需要**再退出到**用户层**处理，而是直接在内核层就直接转入虚机运行态。
+
+# 2. KVM_CREATE_VM: 创建虚拟机
 
 创建VM就写这里吧，`kvm_dev_ioctl_create_vm`函数是主干，在`kvm_create_vm`中，主要有**两个函数**，`kvm_arch_init_vm`和`hardware_enable_all`，需要注意.
 
-## 1.1. struct kvm
+## 2.1. struct kvm
 
 见`数据结构`
 
-## 1.2. kvm_arch_init_vm
+## 2.2. kvm_arch_init_vm
 
 `kvm_arch_init_vm`基本没有特别动作，初始化了`KVM->arch`，以及更新了**kvmclock函数**，这个另外再说。
 
-## 1.3. hardware_enable_all
+## 2.3. hardware_enable_all
 
 而`hardware_enable_all`，针对于**每个CPU**执行“`on_each_cpu(hardware_enable_nolock, NULL, 1)`”，
 
@@ -34,11 +54,11 @@
 
 主要看`hardware_enable`，`crash_enable_local_vmclear`**清理位图**，判断`MSR_IA32_FEATURE_CONTROL`寄存器**是否满足虚拟环境**，不满足则**将条件写入到寄存器**内，`CR4`将`X86_CR4_VMXE`**置位**，另外还有`kvm_cpu_vmxon`打开**VMX操作模式**，外层包了`vmm_exclusive`的判断，它是`kvm_intel.ko`的**外置参数**，默认唯一，可以让用户**强制不使用VMM硬件支持**。
 
-# 2. KVM_CREATE_VCPU
+# 3. KVM_CREATE_VCPU
 
 `kvm_vm_ioctl_create_vcpu`主要有三部分，`kvm_arch_vcpu_create`，`kvm_arch_vcpu_setup`和`kvm_arch_vcpu_postcreate`，重点自然是`kvm_arch_vcpu_create`。
 
-## 2.1. struct kvm_vcpu
+## 3.1. struct kvm_vcpu
 
 老样子，在这之前先看一下VCPU的结构体。
 
@@ -101,7 +121,7 @@ struct kvm_vcpu {
 };
 ```
 
-## 2.2. kvm_arch_vcpu_create
+## 3.2. kvm_arch_vcpu_create
 
 接着看`kvm_arch_vcpu_create`，它借助`kvm_x86_ops->vcpu_create`即`vmx_create_vcpu`完成任务，vmx是X86硬件虚拟化层，从代码看，**qemu用户态**是**一层**，kernel 中**KVM通用代码**是**一层**，类似`kvm_x86_ops`是**一层**，针对各个不同硬件架构，而`vcpu_vmx`则是具体架构的虚拟化方案一层。
 
@@ -373,7 +393,7 @@ static struct x86_emulate_ops emulate_ops = {
 
 vmx执行完后，回到`kvm_vm_ioctl_create_vcpu`函数。`kvm_arch_vcpu_reset`对**vcpu的结构**进行**初始化**，后面一些就是检查vcpu的合法性，最后和kvm串接到一起。
 
-# 3. KVM_RUN
+# 4. KVM_RUN
 
 vcpu的创建到此结束，下面说一下vcpu的运行。
 
