--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -331,7 +331,97 @@ do(x);
 # 利用内存屏障实现无锁环形缓冲区
 
 最后，以一个使用内存屏障实现的无锁环形缓冲区（只有一个读线程和一个写线程时）来结束本文。本代码源于内核FIFO的一个实现，内容如下（略去了非关键代码）：
+
 代码来源：linux-2.6.32.63\kernel\kfifo.c
+
+```cpp
+unsigned int __kfifo_put(struct kfifo *fifo,
+			const unsigned char *buffer, unsigned int len)
+{
+	unsigned int l;
+	len = min(len, fifo->size - fifo->in + fifo->out);
+	/*
+	 * Ensure that we sample the fifo->out index -before- we
+	 * start putting bytes into the kfifo.
+     * 通过内存屏障确保先读取fifo->out后，才将buffer中数据拷贝到
+     * 当前fifo中
+	 */
+	smp_mb();
+	/* first put the data starting from fifo->in to buffer end */
+    /* 将数据拷贝至fifo->in到fifo结尾的一段内存中 */
+	l = min(len, fifo->size - (fifo->in & (fifo->size - 1)));
+	memcpy(fifo->buffer + (fifo->in & (fifo->size - 1)), buffer, l);
+	/* then put the rest (if any) at the beginning of the buffer */
+    /* 如果存在剩余未拷贝完的数据（此时len – l > 0）则拷贝至 
+    * fifo的开始部分
+    */
+	memcpy(fifo->buffer, buffer + l, len - l);
+	/*
+	 * Ensure that we add the bytes to the kfifo -before-
+	 * we update the fifo->in index.
+	 */
+     
+    /*
+     * 通过写操作屏障确保数据拷贝完成后才更新fifo->in
+     */
+	smp_wmb();
+	fifo->in += len;
+	return len;
+}
+
+unsigned int __kfifo_get(struct kfifo *fifo,
+			 unsigned char *buffer, unsigned int len)
+{
+	unsigned int l;
+	len = min(len, fifo->in - fifo->out);
+	/*
+	 * Ensure that we sample the fifo->in index -before- we
+	 * start removing bytes from the kfifo.
+	 */
+    /*
+     * 通过读操作屏障确保先读取fifo->in后，才执行另一个读操作：
+     * 将fifo中数据拷贝到buffer中去
+     */
+	smp_rmb();
+	/* first get the data from fifo->out until the end of the buffer */
+    /* 从fifo->out开始拷贝数据到buffer中 */
+	l = min(len, fifo->size - (fifo->out & (fifo->size - 1)));
+	memcpy(buffer, fifo->buffer + (fifo->out & (fifo->size - 1)), l);
+	/* then get the rest (if any) from the beginning of the buffer */
+    /* 如果需要数据长度大于fifo->out到fifo结尾长度，
+     * 则从fifo开始部分拷贝（此时len – l > 0）
+     */
+	memcpy(buffer + l, fifo->buffer, len - l);
+	/*
+	 * Ensure that we remove the bytes from the kfifo -before-
+	 * we update the fifo->out index.
+	 */
+    /* 通过内存屏障确保数据拷贝完后，才更新fifo->out */
+	smp_mb();
+	fifo->out += len;
+	return len;
+}
+```
+
+这里`__kfifo_put`被一个线程用于向fifo中写入数据，另外一个线程可以安全地调用`__kfifo_get`，从此fifo中读取数据。代码中in和out的索引用于指定环形缓冲区实际的头和尾。具体的in和out所指向的缓冲区的位置通过与操作来求取（例如：fifo->in & (fifo->size -1)），这样相比取余操作来求取下表的做法效率要高不少。使用与操作求取下表的前提是环形缓冲区的大小必须是2的N次方，换而言之，就是说环形缓冲区的大小为一个仅有一个1的二进制数，那么index & (size – 1)则为求取的下标（这不难理解）。
+
+![2020-04-24-09-07-54.png](./images/2020-04-24-09-07-54.png)
+
+索引in和out被两个线程访问。in和out指明了缓冲区中实际数据的边界，也就是in和out同缓冲区数据存在访问上的顺序关系，由于不适用同步机制，那么保证顺序关系就需要使用到内存屏障了。索引in和out都分别只被一个线程修改，而被两个线程读取。__kfifo_put先通过in和out来确定可以向缓冲区中写入数据量的多少，这时，out索引应该先被读取，才能真正将用户buffer中的数据写入缓冲区，因此这里使用到了smp_mb()，对应的，__kfifo_get也使用smp_mb()来确保修改out索引之前缓冲区中数据已被成功读取并写入用户buffer中了。（我认为在__kfifo_put中添加的这个smp_mb()是没有必要的。理由如下，kfifo仅支持一写一读，这是前提。在这个前提下，in和out两个变量是有着依赖关系的，这的确没错，并且我们可以看到在put中，in一定会是最新的，因为put修改的是in的值，而在get中，out一定会是最新的，因为get修改out的值。这里的smp_mb()显然是希望在运行时，遵循out先load新值，in再load新值。的确，这样做是没错，但这是否有必要呢？out一定要是最新值吗？out如果不是最新值会有什么问题？如果out不是最新值，实际上并不会有什么问题，仅仅是在put时，fifo的实际可写入空间要大于put计算出来的空间（因为out是旧值，导致len在计算时偏小），这并不影响程序执行的正确性。从最新linux-3.16-rc3 kernel的代码：lib\kfifo.c的实现：__kfifo_in中也可以看出memcpy(fifo->data + off, src, l); memcpy(fifo->data, src + l, len - l);之前的那次smb_mb()已经被省去了，当然更新in之前的smb_wmb()还是在kfifo_copy_in中被保留了。之所以省去这次smb_mb()的调用，我想除了省去调用不影响程序正确性外，是否还有对于性能影响的考虑，尽量减少不必要的mb调用）对于in索引，在__kfifo_put中，通过smp_wmb()保证先向缓冲区写入数据后才修改in索引，由于这里只需要保证写入操作有序，所以选用写操作屏障，在__kfifo_get中，通过smp_rmb()保证先读取了in索引（这时in索引用于确定缓冲区中实际存在多少可读数据）才开始读取缓冲区中数据（并写入用户buffer中），由于这里指需要保证读取操作有序，故选用读操作屏障。
+
+# 什么时候需要注意考虑内存屏障
+
+从上面的介绍我们已经可以看出，在SMP环境下，内存屏障是如此的重要，在**多线程并发执行的程序**中，一个数据读取与写入的乱序访问，就有可能导致逻辑上错误，而显然这不是我们希望看到的。作为系统程序的实现者，我们涉及到内存屏障的场景主要集中在**无锁编程时的原子操作**。执行这些操作的地方，就是我们需要考虑内存屏障的地方。
+
+从我自己的经验来看，使用原子操作，一般有如下三种方式：(1). 直接对int32、int64进行赋值；(2). 使用gcc内建的原子操作内存访问接口；(3). 调用第三方atomic库：libatomic实现内存原子操作。
+
+对于第一类原子操作方式，显然内存屏障是需要我们考虑的，例如kernel中kfifo的实现，就必须要显示的考虑在数据写入和读取时插入必要的内存屏障，以保证程序执行的顺序与我们设定的顺序一致。
+
+对于使用gcc内建的原子操作访问接口，基本上大多数gcc内建的原子操作都自带内存屏障，他可以确保在执行原子内存访问相关的操作时，执行顺序不被打断。“In most cases, these builtins are considered a full barrier. That is, no memory operand will be moved across the operation, either forward or backward. Further, instructions will be issued as necessary to prevent the processor from speculating loads across the operation and from queuing stores after the operation.”（http://gcc.gnu.org/onlinedocs/gcc-4.4.5/gcc/Atomic-Builtins.html）。当然，其中也有几个并未实现full barrier，具体情况可以参考gcc文档对对应接口的说明。同时，gcc还提供了对内存屏障的封装接口：__sync_synchronize (…)，这可以作为应用程序使用内存屏障的接口(不用写汇编语句)。
+
+对于使用libatomic库进行原子操作，原子访问的程序。Libatomic在接口上对于内存屏障的设置粒度更新，他几乎是对每一个原子操作的接口针对不同平台都有对应的不同内存屏障的绑定。“Provides implementations for atomic memory update operations on a number of architectures. This allows direct use of these in reasonably portable code. Unlike earlier similar packages, this one explicitly considers memory barrier semantics, and allows the construction of code that involves minimum overhead across a variety of architectures.”接口实现上分别添加了_release/_acquire/_full等各个后缀，分别代表的该接口的内存屏障类型，具体说明可参见libatomic的README说明。如果是调用最顶层的接口，已AO_compare_and_swap为例，最终会根据平台的特性以及宏定义情况调用到：AO_compare_and_swap_full或者AO_compare_and_swap_release或者AO_compare_and_swap_release等。我们可以重点关注libatomic在x86_64上的实现，libatomic中，在x86_64架构下，也提供了应用层的内存屏障接口：AO_nop_full
+
+综合上述三点，总结下来便是：如果你在程序中是裸着写内存，读内存，则需要显式的使用内存屏障确保你程序的正确性，gcc内建不提供简单的封装了内存屏障的内存读写，因此，如果只是使用gcc内建函数，你仍然存在裸读，裸写，此时你还是必须显式使用内存屏障。如果你通过libatomic进行内存访问，在x86_64架构下，使用AO_load/AO_store，你可以不再显式的使用内存屏障（但从实际使用的情况来看，libatomic这类接口的效率不是很高）
 
 # 参考
 
