--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/1. 基本原理.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/1. 基本原理.md
@@ -2,22 +2,22 @@
 
 <!-- code_chunk_output -->
 
-- [中断虚拟化](#中断虚拟化)
-- [物理中断](#物理中断)
-  - [vcpu运行时的截获和注入](#vcpu运行时的截获和注入)
-- [虚拟中断](#虚拟中断)
-- [参考](#参考)
+- [1. 中断虚拟化](#1-中断虚拟化)
+- [2. 物理中断](#2-物理中断)
+  - [2.1. vcpu运行时的截获和注入](#21-vcpu运行时的截获和注入)
+- [3. 虚拟中断](#3-虚拟中断)
+- [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
 
-# 中断虚拟化
+# 1. 中断虚拟化
 
-中断虚拟化，有两方面：
+中断虚拟化，涉及两方面工作：
 
 1. **如何保证物理中断只由host来处理**；
 2. host如何将一个**虚拟中断注入到guest**中。
 
-# 物理中断
+# 2. 物理中断
 
 首先看物理中断情况:
 
@@ -33,7 +33,7 @@
 
 现在一切都明白了：**guest vcpu执行时**，**物理中断来了**，它可以导致**VMExit**，但是此时是**关中断**，所以**硬件不会响应中断**，中断处于**pending**，在**中断开后**，硬件发现**pending中断并开始响应**，此时已经是在**host上下文**中，**IDTR已经指向host的IDT**，因此物理中断实际上是由**host handler来处理**了。
 
-## vcpu运行时的截获和注入
+## 2.1. vcpu运行时的截获和注入
 
 假如在**guest运行期间**发生了一个**物理中断**，kvm是**如何截获**进入将其**注入到guest**中去的呢？有两个步骤：
 
@@ -43,7 +43,7 @@
 
 对于1. 情况，暂时也还不知道KVM具体是如何实现的。不过vmx倒也是支持这种注入操作。只要vmcs的"`VM-Execution control field`"中的"`Interrupt-window exiting`"位设**置为1**，**只要guest IF=1**，在**下一条任意指令前**，会发生**VMExit**，就像**普通情况下发生了一次中断**一样。也就是说，**kvm**应该可以通过设置"`Interrupt-window exiting`"**中断guest vcpu的执行**，然后像后一种情况一样，**把虚拟中断注入到虚拟机中**。
 
-# 虚拟中断
+# 3. 虚拟中断
 
 再来看虚拟中断的情况；
 
@@ -55,6 +55,6 @@ KVM用QEMU来提供**设备模拟**，与物理设备一样，**模拟的设备*
 
 对于2. 情况，可以参考`vmx_inject_irq`和`vmx_inject_nmi`(`vmx.c`)，可以发现，kvm是利用**vmx支持**这种**注入操作的特性**：vmcs中有"`VM-Entry control fields`"，其中又包含"`VM-entry interruption-information field`"，可以将**中断类型**和**中断号**记录到其中，在**VMEntry过程**中，硬件会**自动检测这个信息域**，如果有效，就会在**真正执行任何guest指令之前**，像原来硬件一样**响应此中断**(包括**压IP,CS,FLAGS**；从**IDT中取interrupt vector**等)，注意此操作是在**恢复了guest上下文之后**，所以**物理IDTR**已经是指向**guest OS IDT**了，因此这个虚拟中断就由guest handler来处理了。
 
-# 参考
+# 4. 参考
 
 https://blog.csdn.net/xidianjiapei001/article/details/89293842
