--- Auto-Git Commit ---

--- a/Vim/1. 入门基础.md
+++ b/Vim/1. 入门基础.md
@@ -42,8 +42,10 @@
 - [5. 视图模式](#5-视图模式)
   - [5.1. 操作](#51-操作)
 - [6. vim配置](#6-vim配置)
-  - [vim自身配置项](#vim自身配置项)
-    - [配置文件路径](#配置文件路径)
+  - [6.1. vim自身配置项](#61-vim自身配置项)
+    - [6.1.1. 配置文件路径](#611-配置文件路径)
+    - [6.1.2. vim配置选项](#612-vim配置选项)
+    - [6.1.3. 配置项资料](#613-配置项资料)
 - [7. Vim插件](#7-vim插件)
 - [8. Vim完整文档](#8-vim完整文档)
 - [9. 参考](#9-参考)
@@ -757,11 +759,11 @@ g~      大小写互调
 
 最初安装的Vim功能、特性支持比较少，用起来比较费劲，想要稍微“好用”一点，需做一些初步的配置。Vim的配置主要分为**Vim本身特性的配置**和**外部插件的配置**两部分。
 
-## vim自身配置项
+## 6.1. vim自身配置项
 
 Vim的配置是通常是存放在用户主目录的 `.vimrc` 的隐藏文件中的。就Vim本身特性来说，基础的配置有编程语言语法高亮、缩进设置、行号显示、搜索高亮、TAB键设置、字体设置、Vim主题设置等等，稍微高级一些的有编程语言缩进、自动补全设置等.
 
-### 配置文件路径
+### 6.1.1. 配置文件路径
 
 首先，让我们在Linux下的vim中输入“:version”命令
 
@@ -773,7 +775,7 @@ Windows下面输入“:version”查看结果
 
 - 在windows下，有三个可选的用户`vimrc`文件，一个是`$HOME\_vimrc`，另一个是`$HOME\vimfiles\vimrc`，还有一个是`$VIM\_vimrc`。vim启动时，会先尝试执行系统的vimrc文件(通常此文件不存在)，然后将按照上述顺序查找用户vimrc，并执行所找到的第一个用户vimrc中的命令，忽略其余的用户vimrc。
 
-- 在Linux下使用的vimrc文件名为vimrc，而在windows下因为不支持以点(.)开头的文件名，vimrc文件的名字使用`_vimrc`。不过，在Linux下，如果未找到名为.vimrc的文件，也会尝试查找名为\_vimrc的文件；而在windows下也是这样，只不过查找顺序颠倒一下，如果未找到名为_vimrc的文件，会去查找.vimrc。
+- 在Linux下使用的vimrc文件名为vimrc，而在windows下因为不支持以点(.)开头的文件名，vimrc文件的名字使用`_vimrc`。不过，在Linux下，如果未找到名为.vimrc的文件，也会尝试查找名为`_vimrc`的文件；而在windows下也是这样，只不过查找顺序颠倒一下，如果未找到名为`_vimrc`的文件，会去查找.vimrc。
 
 - 从这里可以看出，vimrc的执行先于gvimrc。所以我们可以把全部vim配置命令都放在vimrc中，不需要用gvimrc。
 
@@ -784,23 +786,19 @@ Windows下面输入“:version”查看结果
 :echo $HOME 
 ```
 
-在windows版本的vim安装时，缺省会安装一个$VIM/\_vimrc的，你可以直接修改这个\_vimrc，加入你自己的配置(使用:e $VIM/\_vimrc可以打开此文件。或者，你也可以在windows中增加一个名为HOME的环境变量(控制面板->系统–>高级–>环境变量)，然后把你的vimrc放在HOME环境变量所指定的目录中。从上面:version命令的输出看到，$HOME/\_vimrc如果存在，就会执行这个文件中的配置，而跳过$VIM/\_vimrc。
+在windows版本的vim安装时，缺省会安装一个`$VIM/_vimrc`的，你可以直接修改这个`_vimrc`，加入你自己的配置(使用`:e $VIM/_vimrc`可以打开此文件。或者，你也可以在windows中增加一个名为HOME的环境变量(控制面板->系统–>高级–>环境变量)，然后把你的vimrc放在HOME环境变量所指定的目录中。从上面:version命令的输出看到，`$HOME/_vimrc`如果存在，就会执行这个文件中的配置，而跳过`$VIM/_vimrc`。
 
-如果使用”vim -u filename“命令来启动vim，则会用你指定的filename作为vim的配置文件(在调试你的vimrc时有用)；如果用”vim -u NORC“命令启动vim，则不读取任何vimrc文件：当你怀疑你的vimrc配置有问题时，可以用这种方式跳过vimrc的执行。
+如果使用”`vim -u filename`“命令来启动vim，则会用你**指定的filename**作为vim的**配置文件**(在调试你的vimrc时有用)；如果用”`vim -u NORC`“命令启动vim，则不读取任何vimrc文件：当你怀疑你的vimrc配置有问题时，可以用这种方式跳过vimrc的执行。
 
 通过命令
 
-```
+```cpp
 :echo $MYVIMRC
 ```
 
 查看当前vim配置文件路径
 
-具体配置项可以自行查资料，全面详细的配置项介绍可以参考：
-
-《Vim Options》：
-
-http://vimcdoc.sourceforge.net/doc/options.html#%27completeopt%27
+### 6.1.2. vim配置选项
 
 以下介绍几个常用的底行模式命令：
 
@@ -890,6 +888,14 @@ else
 set backup
 endif
 ```
+
+### 6.1.3. 配置项资料
+
+具体配置项可以自行查资料，全面详细的配置项介绍可以参考：
+
+《Vim Options》：
+
+http://vimcdoc.sourceforge.net/doc/options.html#%27completeopt%27
 
 # 7. Vim插件
 
