--- a/Vim/寄存器.md
+++ b/Vim/寄存器.md
@@ -5,12 +5,15 @@
 
 - [1. 官方帮助手册](#1-官方帮助手册)
 - [2. 寄存器分类](#2-寄存器分类)
-  - [2.1. 无名寄存器(默认寄存器): \"](#21-无名寄存器默认寄存器)
+  - [2.1. 无名寄存器(默认寄存器): "](#21-无名寄存器默认寄存器)
   - [2.2. 复制专用寄存器: 0](#22-复制专用寄存器-0)
-  - [2.3. 系统剪切板寄存器: \+](#23-系统剪切板寄存器)
-  - [2.4. 黑洞寄存器: \_](#24-黑洞寄存器-_)
-  - [2.5. 命名寄存器: a\-z](#25-命名寄存器-a-z)
-  - [2.6. 表达式寄存器: \=](#26-表达式寄存器)
+  - [2.3. 系统剪切板寄存器: +](#23-系统剪切板寄存器)
+    - [2.3.1. windows:](#231-windows)
+    - [2.3.2. Linux](#232-linux)
+    - [2.3.3. 使用](#233-使用)
+  - [2.4. 黑洞寄存器: _](#24-黑洞寄存器-_)
+  - [2.5. 命名寄存器: a-z](#25-命名寄存器-a-z)
+  - [2.6. 表达式寄存器: =](#26-表达式寄存器)
   - [2.7. 特定信息寄存器](#27-特定信息寄存器)
 - [3. 各种复制粘贴命令说明](#3-各种复制粘贴命令说明)
 - [4. 在普通模式中使用寄存器](#4-在普通模式中使用寄存器)
@@ -51,7 +54,7 @@
 
 - 9.模式寄存器（last search pattern）：(\/)，缓存最近的搜索模式。
 
-## 2.1. 无名寄存器(默认寄存器): \"
+## 2.1. 无名寄存器(默认寄存器): "
 
 **无名寄存器(")**，它用一个双引号(")来标识，这个是我们接触的最多的寄存器了，如果没有特别指定的话，复制(y)，剪切(x,s,d,c和他们的大写)，粘贴(p)命令都会将内容存放到这个寄存器里面，或是从这个寄存器里面来读取内容。
 
@@ -72,9 +75,25 @@ printf("world!\n");
 
 这时，将会粘贴**复制专用寄存器**中的内容。
 
-## 2.3. 系统剪切板寄存器: \+
+## 2.3. 系统剪切板寄存器: +
 
-**系统剪贴板寄存器(+)和X11视窗系统的主剪贴板寄存器(\*)**。众所周知，任何操作系统都有一个剪贴版板，而vim就是用\+寄存器来代表这个剪贴版。
+### 2.3.1. windows:
+
+配置文件中添加 
+
+```
+set clipboard=unnamed
+```
+
+添加到~/.vimrc, 注意只在gvim有效, 因为gvim有一个+寄存器, 可以与外部程序共享.
+
+### 2.3.2. Linux
+
+可以下载源码重新编译，在configure的时候增加 --with-features=huge。
+
+### 2.3.3. 使用
+
+系统剪贴板寄存器(+)和X11视窗系统的主剪贴板寄存器(`*`)。众所周知，任何操作系统都有一个剪贴版板，而vim就是用\+寄存器来代表这个剪贴版。
 
 复制到系统剪贴板，这时打开vim想要粘贴到vim中，那么只需要这个命令就好了
 
@@ -90,18 +109,18 @@ printf("world!\n");
 
 还有一个主剪贴板的寄存器，这个是在Linux下的X11视窗系统中才存在的东西，这个寄存器中存放的就是上次高亮选中的内容。
 
-## 2.4. 黑洞寄存器: \_
+## 2.4. 黑洞寄存器: _
 
-**黑洞寄存器(\_)**。这个寄存器的功能和/**dev/null设备**非常地相似，就是将一切输入其中的东西都吞噬掉。平常我们经常用**x命令**来删除某个字符，用**dd命令**来删除某行，其实这些都**不是删除**，是剪贴，真正的删除应该是这些命令：
+**黑洞寄存器(`_`)**。这个寄存器的功能和/**dev/null设备**非常地相似，就是将一切输入其中的东西都吞噬掉。平常我们经常用**x命令**来删除某个字符，用**dd命令**来删除某行，其实这些都**不是删除**，是剪贴，真正的删除应该是这些命令：
 
 ```
 "_dd         //删除某行
 "_x          //删除光标下的字符
 ```
 
-## 2.5. 命名寄存器: a\-z
+## 2.5. 命名寄存器: a-z
 
-**命名寄存器(a\-z)**。这个一共是a\-z26个寄存器，分别用英文字母来表示。
+**命名寄存器(`a-z`)**。这个一共是a\-z26个寄存器，分别用英文字母来表示。
 
 这个感觉主要需要讲的就是大写字母和小写字母的区别，当**向寄存器中写入内容**的时候（即**复制或者剪切**的时候），**大写字母**表示的是将**当前要复制的内容追加到寄存器**中，而**小写字母**表示的是将**当前要复制的内容**将寄存器中的**原有内容**给覆盖掉。这个可以类比于数据流重定向中的">"和">>"命令。
 
@@ -124,9 +143,9 @@ printf("World!\n");
 
 ![Linux :version](images/a_cover_register.png)
 
-## 2.6. 表达式寄存器: \=
+## 2.6. 表达式寄存器: =
 
-**表达式寄存器(=)**。normal模式下按"=或者插入模式下按<C-r>,=来进入编辑vim表达式的模式，表达式运行的结果将被插入到vim的缓冲区中。
+**表达式寄存器(`=`)**。normal模式下按"=或者插入模式下按<C-r>,=来进入编辑vim表达式的模式，表达式运行的结果将被插入到vim的缓冲区中。
 
 ## 2.7. 特定信息寄存器
 
