--- a/Vim/3. tab和缩进.md
+++ b/Vim/3. tab和缩进.md
@@ -1,4 +1,67 @@
 
+# tab
+
+tab选项：
+
+1. tabstop：表示一个 tab 显示出来是多少个空格，默认 8
+2. softtabstop：在编辑的时候（比如按退格或 tab 键）一个 tab 是多少个空格（有点不好理解。。。我也没完全弄明白）
+3. expandtab/noexpandtab：将 tab 扩展/不扩展成空格
+4. shiftwidth：每一级缩进是多少个空格
+5. smarttab：根据文件中其他地方的缩进空格个数来确定一个 tab 是多少个空格
+
+## tabstop
+
+定义tab所等同的空格长度，一般来说最好设置成8，因为如果是其它值的话，可能引起文件在打印之类的场合中看起来很别扭。除非你设置了 expandtab模式，也就是把tabs转换成空格，这样的话就不会一起混淆，不过毕竟制表符为8是最常用最普遍的设置，所以一般还是不要改。
+
+其实就是一个常量，进行`\t`与`space`的**宽度兑换**，即一个`\t`能兑换成**多少个宽度的space字符**。
+
+如果触发一个`\t`操作**输入时**的tab宽度就是一个`\t`且**宽度等于tabstop**，还有就是作为**读文件**时一个`\t`键能**占多少个宽度**。
+
+## shiftwidth
+
+这个是用于程序中**自动缩进**所使用的**space宽度**。一般来说为了保持程序的美观，和tabstop最好一致。同时它也是**符号移位长度**的制定者。
+
+
+3 softtabstop
+
+如果我们希望改变程序中的缩进怎么办？shiftwidth和tabstop不一样的话，你会发现程序比较难看的。这时候，softtabstop就起作用了。可以从vim的说明中看到，一旦设置了softtabstop的值时，你按下tab键，插入的是空格和tab制表符的混合，具体如何混合取决于你设定的softtabstop，举个例子，如果设定softtabstop=8, 那么按下tab键，插入的就是正常的一个制表符;如果设定 softtabstop=16,那么插入的就是两个制表符；如果softtabstop=12,那么插入的就是一个制表符加上4个空格；如果 softtabstop=4呢？那么一开始，插入的就是4个空格，此时一旦你再按下一次tab，这次的四个空格就会和上次的四个空格组合起来变成一个制表符。换句话说，softtabstop是“逢8空格进1制表符”,前提是你tabstop=8。
+
+4 关于expandtab
+举个例子，在多人一起开发项目时，为了使代码风格尽量保持一致，一般不允许在代码使用TAB符，而以4个空格代之。我们可以编辑一个文件，包含下面的内容：
+set shiftwidth=4
+set expandtab
+
+然后把下面的命令加入到.vimrc中：
+autocmd FileType c,cpp set shiftwidth=4 | set expandtab
+
+就可以只在编辑c和cpp文件时实行这种设置了
+
+
+
+    2、接着说一下shiftwidth它是一个缩进的长度设置。要想使用你的代码看起来更美观，他与其它的组合（tabstop、softtabstop以及expandtab)有很多种这里一般推荐上面的第二种，一般推荐上面的.他也有间接的充当了扳机的作用，就是如果你在进行多少个缩进的时候并且是expandtab这个时候他也有合并的操作就是如果shiftwidth满足多少个长度等于tabstop时兑换成一个\t，当然这里面有一个重要的概念就是关于\t键的对齐，上面满足兑换条件的前题之前的前题就是\t的对齐，能理解吗？慢慢实践吧
+
+    3、softtabstop是一个转换器，当你通过键盘触发了一个\t操作时，他会将其转换为多少个宽度的字符，但是vim中此时他只点有\t而不是很多个你设定的sottabstop的宽度的spaces，这个属性是一个很有意思的东西。当你开启他时(即 softtabstop!=0)，这个时候只要点击键盘上的Tab键时，就会触发一个兑换与合并的功能（当然这个你得开启noexpandtab这个属性,这个属性下面会讲），那么这个时候就输入的tab就不是直接输入到vim中了，这个时候tab键就充当一个扳机触发了兑换与合并的操作，当然如果expandtab了，那么你键入tab键时，就直接总换成softtabstop所对于的宽度的space了
+
+    4、现在是expandtab了，当然就是展开了。就是将所有输入到vim中的\t转化成为多少个空格了，
+
+        4.1）如果未开启softtabstop，则直接展开tabstop常数个spaces
+
+        4.2）如果开启sfottabstop,那么就以softtabp为常数个spaces
+
+    如果noexpandtab，那么就是解释上同不过仅仅是一个\t点用多少个宽度的spaces的位置（注意了，其实质是占位）。
+
+心得到此了。还有什么要说的呢。就是解释一下，上面那几种配置吧
+
+1、这个就是前面提到的大前题了，即最小化\t与spaces实现空白符，他实现了\t实体键入的与softtabstop之前的兑换。同样是shiftwidth进行缩进时的spaces与\t之前的兑换。适合于window时下的编辑程，当然如果你公司要求通过spaces来实现缩进下面的更适合你了
+
+2、第二个配置是展开了，就不多说了，只要你把shiftwidth与tabstop配置得与你代码看起来好看，你怎么配都可以
+
+3、这个就是只有在vim下，编辑与查看了。这个有局限
+
+4、这个只有你实践以后才知道，就是\t对齐惹的祸。没有办法说明白，实践实践就出来了。
+
+
+
 
 # c程序
 
