--- Auto-Git Commit ---

--- a/Vim/4. 寄存器.md
+++ b/Vim/4. 寄存器.md
@@ -8,7 +8,7 @@
   - [2.1. 无名寄存器(默认寄存器): "](#21-无名寄存器默认寄存器)
   - [2.2. 复制专用寄存器: 0](#22-复制专用寄存器-0)
   - [2.3. 系统剪切板寄存器: +](#23-系统剪切板寄存器)
-    - [2.3.1. windows:](#231-windows)
+    - [2.3.1. windows](#231-windows)
     - [2.3.2. Linux](#232-linux)
     - [2.3.3. 使用](#233-使用)
   - [2.4. 黑洞寄存器: _](#24-黑洞寄存器-_)
@@ -77,7 +77,7 @@ printf("world!\n");
 
 ## 2.3. 系统剪切板寄存器: +
 
-### 2.3.1. windows:
+### 2.3.1. windows
 
 配置文件中添加 
 
@@ -85,7 +85,7 @@ printf("world!\n");
 set clipboard=unnamed
 ```
 
-添加到~/.vimrc, 注意只在gvim有效, 因为gvim有一个+寄存器, 可以与外部程序共享.
+添加到~/.vimrc, 注意只在gvim有效, 因为gvim有一个`+`寄存器, 可以与外部程序共享.
 
 ### 2.3.2. Linux
 
@@ -93,7 +93,7 @@ set clipboard=unnamed
 
 ### 2.3.3. 使用
 
-系统剪贴板寄存器(+)和X11视窗系统的主剪贴板寄存器(`*`)。众所周知，任何操作系统都有一个剪贴版板，而vim就是用\+寄存器来代表这个剪贴版。
+系统剪贴板寄存器(`+`)和X11视窗系统的主剪贴板寄存器(`*`)。众所周知，任何操作系统都有一个剪贴版板，而vim就是用`+`寄存器来代表这个剪贴版。
 
 复制到系统剪贴板，这时打开vim想要粘贴到vim中，那么只需要这个命令就好了
 
