--- Auto-Git Commit ---

--- a/Vim/7. 查找替换及正则表达式.md
+++ b/Vim/7. 查找替换及正则表达式.md
@@ -3,18 +3,17 @@
 
 <!-- code_chunk_output -->
 
-* [简单替换表达式](#简单替换表达式)
-* [正则表达式](#正则表达式)
-	* [1. 元字符](#1-元字符)
-		* [元字符](#元字符)
-		* [一些普通字符需转意](#一些普通字符需转意)
-		* [表示数量的元字符](#表示数量的元字符)
-		* [表示位置的元字符](#表示位置的元字符)
-	* [2. 替换变量](#2-替换变量)
+- [1. 简单替换表达式](#1-简单替换表达式)
+- [2. 正则表达式](#2-正则表达式)
+  - [2.1. 元字符](#21-元字符)
+    - [2.1.1. 一些普通字符需转意](#211-一些普通字符需转意)
+    - [2.1.2. 表示数量的元字符](#212-表示数量的元字符)
+    - [2.1.3. 表示位置的元字符](#213-表示位置的元字符)
+  - [2.2. 替换变量](#22-替换变量)
 
 <!-- /code_chunk_output -->
 
-## 简单替换表达式
+# 1. 简单替换表达式
 
 :[range]s/from/to/[flags]
 
@@ -34,11 +33,9 @@ flags 有如下四个选项：
 
 这些选项可以合并使用，如cgi表示不区分大小写，整行替换，替换前询问。
 
-## 正则表达式
+# 2. 正则表达式
 
-### 1. 元字符
-
-#### 元字符
+## 2.1. 元字符
 
 ```
 元字符	   说明
@@ -60,7 +57,7 @@ flags 有如下四个选项：
 \S         匹配非空白字符，等同于[^\t]
 ```
 
-#### 一些普通字符需转意
+### 2.1.1. 一些普通字符需转意
 
 ```
 元字符	   说明
@@ -72,7 +69,7 @@ flags 有如下四个选项：
 \]         匹配 ] 字符
 ```
 
-#### 表示数量的元字符
+### 2.1.2. 表示数量的元字符
 
 ```
 元字符	   说明
@@ -85,7 +82,7 @@ flags 有如下四个选项：
 \{,m}	   匹配0-m个
 ```
 
-#### 表示位置的元字符
+### 2.1.3. 表示位置的元字符
 
 ```
 元字符	   说明
@@ -95,7 +92,7 @@ $          匹配行尾
 \>         匹配单词词尾
 ```
 
-### 2. 替换变量
+## 2.2. 替换变量
 
 在正则式中以\(和\)括起来的正则表达式，在后面使用的时候可以用\1、\2等变量来访问\(和\)中的内容。
 
