--- a/Vim/VIM使用进阶/11. 程序员的利器cscope.md
+++ b/Vim/VIM使用进阶/11. 程序员的利器cscope.md
@@ -1,5 +1,5 @@
-如果想查找函数在哪里被调用，或者标签在哪些地方出现过，这时需要使用更为强大的cscope。本文就介绍如何使用cscope，有了它，你可以把source insight抛到一边去了。
 
+# 介绍
 Cscope是一个类似ctags的工具。 你可以把它想作是超过频的ctags，因为它功能比ctags强大很多。
 
 本节所用命令的帮助入口：
@@ -10,13 +10,17 @@ Cscope是一个类似ctags的工具。 你可以把它想作是超过频的ctags
 
 Cscope具有纯正的Unix血统，它最早是由贝尔实验室为PDP-11计算机开发的，后来成为商用的AT&T Unix发行版的组成部分。直到2000年4月，这个工具才由SCO公司以BSD license开源发行。
 
-Cscope的主页在 http://cscope.sourceforge.net/ ，如果你的计算机上没有cscope，你可以在此处下载它，在写本文时，它的最新版本是15.6。安装它非常简单，你只需要在cscope的源代码目录中执行下面三条命令：
+# 安装配置
+
+Cscope的主页在 http://cscope.sourceforge.net/ . 安装它非常简单，你只需要在cscope的源代码目录中执行下面三条命令：
 
 ```
 ./configure
 make
 make install 
 ```
+
+按照vim里cscope的参考手册(在vim中执行”:help cscope”命令)，把cscope功能加到.vimrc里后(需要你的vim在编译时选择了”`–enable-cscope`”选项，否则你需要重新编译vim)，配置就算完成了。
 
 cscope的用法很简单，首先需要为你的代码生成一个cscope数据库。在你的项目根目录运行下面的命令：
 
