--- Auto-Git Commit ---

--- a/Vim/0. Tips.md
+++ b/Vim/0. Tips.md
@@ -4,26 +4,6 @@
 <!-- code_chunk_output -->
 
 - [1. 访问特殊数值](#1-访问特殊数值)
-- [2. 跳转](#2-跳转)
-- [3. 文件相关](#3-文件相关)
-- [4. 编辑相关](#4-编辑相关)
-  - [4.1. 缩进](#41-缩进)
-    - [4.1.1. normal 模式下](#411-normal-模式下)
-    - [4.1.2. Visual 模式下](#412-visual-模式下)
-    - [4.1.3. INSERT 模式下](#413-insert-模式下)
-    - [4.1.4. 自动缩进](#414-自动缩进)
-  - [4.2. 空格和tab](#42-空格和tab)
-    - [4.2.1. 默认设置tab为4个空格](#421-默认设置tab为4个空格)
-    - [4.2.2. 修改已经保存的文件](#422-修改已经保存的文件)
-    - [4.2.3. tab替换为空格](#423-tab替换为空格)
-    - [4.2.4. 空格替换为TAB](#424-空格替换为tab)
-- [5. 显示相关](#5-显示相关)
-  - [5.1. 4.1 高亮显示](#51-41-高亮显示)
-    - [5.1.1. 方法一：单高亮](#511-方法一单高亮)
-    - [5.1.2. 方法二：多高亮](#512-方法二多高亮)
-    - [5.1.3. 方法三：插件mark.vim](#513-方法三插件markvim)
-- [6. 文件目录查找字符串](#6-文件目录查找字符串)
-- [7. 乱码](#7-乱码)
 
 <!-- /code_chunk_output -->
 
@@ -34,6 +14,21 @@
 * “&”——访问 Vim 选项
 * “@”——访问寄存器
 
+例如
+```
+:echo $VIM
+/usr/share/vim
+:echo $VIMRUNTIME
+usr/share/vim/vim73
+
+:echo &sessionoptions
+blank,buffers,folds,help,options,tabpages,winsize,sesdir
+```
+或者
+```
+:echo sessionoptions
+sessionoptions=blank,buffers,folds,help,options,tabpages,winsize,sesdir
+```
 # 2. 跳转
 
 - 跳动(jump) 来说，\<c-o\> 相当于是后退，\<c-i\> 是前进。
