--- a/Vim/2. 图解教程.md
+++ b/Vim/2. 图解教程.md
@@ -13,7 +13,7 @@
   - [2.6. lession 6:](#26-lession-6)
   - [2.7. lession 7:](#27-lession-7)
 - [3. vim 命令图解](#3-vim-命令图解)
-- [4. Vim特性图解](#4-vim特性图解)
+- [4. vim 特性图解](#4-vim-特性图解)
 - [5. 参考](#5-参考)
 
 <!-- /code_chunk_output -->
@@ -78,7 +78,7 @@
 
 ![vim命令图解](images/Vim_Commands.png)
 
-# 4. Vim特性图解
+# 4. vim 特性图解
 
 ![vim feature](images/vim-study.png)
 
