--- a/Vim/VIM使用进阶/11. 程序员的利器cscope.md
+++ b/Vim/VIM使用进阶/11. 程序员的利器cscope.md
@@ -22,19 +22,25 @@ make install
 
 按照vim里cscope的参考手册(在vim中执行”:help cscope”命令)，把cscope功能加到.vimrc里后(需要你的vim在编译时选择了”`–enable-cscope`”选项，否则你需要重新编译vim)，配置就算完成了。
 
+# 使用
+
 cscope的用法很简单，首先需要为你的代码生成一个cscope数据库。在你的项目根目录运行下面的命令：
 
 ```
 cscope -Rbq 
 ```
 
-这些选项的含义见后面。这个命令会生成三个文件：cscope.out, cscope.in.out, cscope.po.out。其中cscope.out是基本的符号索引，后两个文件是使用”-q“选项生成的，可以加快cscope的索引速度。在windows上使用cscope时，你可能会遇到-q选项被忽略的提示，解决办法请看这篇文章：Windows下cscope -q选项出错的解决。
+这些选项的含义见后面。这个命令会生成三个文件：cscope.out, cscope.in.out, cscope.po.out。其中cscope.out是基本的符号索引，后两个文件是使用”`-q`“选项生成的，可以加快cscope的索引速度。在windows上使用cscope时，你可能会遇到-q选项被忽略的提示，解决办法请看这篇文章：Windows下`cscope -q`选项出错的解决。
 
 在缺省情况下，cscope在生成数据库后就会进入它自己的查询界面，我们一般不用这个界面，所以使用了”-b“选项。如果你已经进入了这个界面，按CTRL-D退出。
 
-Cscope在生成数据库中，在你的项目目录中未找到的头文件，会自动到/usr/include目录中查找。如果你想阻止它这样做，使用”-k“选项。
+Cscope在生成数据库中，在你的项目目录中未找到的头文件，会自动到/usr/include目录中查找。如果你想阻止它这样做，使用”`-k`“选项。
 
-Cscope缺省只解析C文件(.c和.h)、lex文件(.l)和yacc文件(.y)，虽然它也可以支持C\+\+以及Java，但它在扫描目录时会跳过C\+\+及Java后缀的文件。如果你希望cscope解析C\+\+或Java文件，需要把这些文件的名字和路径保存在一个名为cscope.files的文件。当cscope发现**在当前目录中**存在cscope.files时，就会为cscope.files中列出的所有文件生成索引数据库。通常我们使用find来生成cscope.files文件，仍以vim 7.0的源代码为例：
+Cscope缺省只解析C文件(.c和.h)、lex文件(.l)和yacc文件(.y)，虽然它也可以支持`C++`以及Java，但它在扫描目录时会跳过`C++`及Java后缀的文件。
+
+如果你希望cscope解析`C++`或Java文件，需要把这些文件的名字和路径保存在一个名为cscope.files的文件。当cscope发现**在当前目录中**存在`cscope.files`时，就会为cscope.files中列出的所有文件生成索引数据库。
+
+通常我们使用find来生成cscope.files文件，仍以vim 7.0的源代码为例：
 
 ```
 cd ~/src/vim70 
@@ -45,7 +51,7 @@ cscope -bq -i cscope.files
 cscope -Rbkq -i cscope.files
 ```
 
-这条命令把~src/vim70目录下的所有普通文件都加入了cscope.files，这样，cscope会解析该目录下的每一个文件。上面的cscope命令并没有使用”-R“参数递归查找子目录，因为在cscope.files中已经包含了子目录中的文件。
+这条命令把~src/vim70目录下的所有普通文件都加入了cscope.files，这样，cscope会解析该目录下的每一个文件。上面的cscope命令并没有使用”`-R`“参数递归查找子目录，因为在cscope.files中已经包含了子目录中的文件。
 
 注意：find命令输出的文件以相对路径表示，所以cscope.out的索引也相对于当前路径。如果你要在其它路径中使用当前的cscope.out，需要使用下面介绍的-P选项。
 
