--- a/Vim/1. 入门基础.md
+++ b/Vim/1. 入门基础.md
@@ -773,7 +773,7 @@ Windows下面输入“:version”查看结果
 
 ![Windows :version](images/version_windows.png)
 
-- 在windows下，有三个可选的用户`vimrc`文件，一个是`$HOME\_vimrc`，另一个是`$HOME\vimfiles\vimrc`，还有一个是`$VIM\_vimrc`。vim启动时，会先尝试执行系统的vimrc文件(通常此文件不存在)，然后将按照上述顺序查找用户vimrc，并执行所找到的第一个用户vimrc中的命令，忽略其余的用户vimrc。
+- 在windows下，有三个可选的用户`vimrc`文件，一个是`$HOME_vimrc`，另一个是`$HOME\vimfiles\vimrc`，还有一个是`$VIM_vimrc`。vim启动时，会先尝试执行系统的vimrc文件(通常此文件不存在)，然后将按照上述顺序查找用户vimrc，并执行所找到的第一个用户vimrc中的命令，忽略其余的用户vimrc。
 
 - 在Linux下使用的vimrc文件名为vimrc，而在windows下因为不支持以点(.)开头的文件名，vimrc文件的名字使用`_vimrc`。不过，在Linux下，如果未找到名为.vimrc的文件，也会尝试查找名为`_vimrc`的文件；而在windows下也是这样，只不过查找顺序颠倒一下，如果未找到名为`_vimrc`的文件，会去查找.vimrc。
 
